# dogfights

./: .gitignore  Cargo.toml  crates  dogfights.sublime-project
actors/: Cargo.toml  lib.rs
ai/: Cargo.toml  lib.rs
bincode/: Cargo.toml
bincode/examples/: basic.rs  file.rs
bincode/src/: lib.rs  reader.rs  test.rs  writer.rs
conf/: Cargo.toml  lib.rs
dogfights/: actors.rs  constants.rs  dogfights-local.rs  dogfights-remote-ai.rs  dogfights-remote.rs  dogfights-server.rs  game.rs  geometry.rs  init.rs  main.rs  render.rs  specs.rs
geometry/: Cargo.toml  lib.rs
input/: Cargo.toml  lib.rs
interpolate/: Cargo.toml  extrapolate.rs  interpolate.rs  lib.rs
network/: Cargo.toml  lib.rs
physics/: Cargo.toml  lib.rs
render/: Cargo.toml  lib.rs
server/: Cargo.toml  lib.rs
specs/: Cargo.toml  lib.rs
src/: actors.rs  constants.rs  dogfights-remote.rs  dogfights-server.rs  dogfights.rs  game.rs  geometry.rs  input.rs  lib.rs  main.rs  network.rs  physics.rs  rect.rs  render.rs  spec.rs  specs.rs  texture.rs  transformation.rs  vec.rs  vec2.rs
