[package]

name = "dogfights"
version = "0.0.1"
authors = [ "Francesco Mazzoli <f@mazzo.li>" ]

[lib]
name = "dogfights"
path = "dogfights/main.rs"

[[bin]]
name = "dogfights-local"
path = "dogfights/dogfights-local.rs"

[[bin]]
name = "dogfights-server"
path = "dogfights/dogfights-server.rs"

[[bin]]
name = "dogfights-remote"
path = "dogfights/dogfights-remote.rs"

[dependencies]
rustc-serialize = "0.2.7"
log = "^0"
sdl2 = "0.0.16"

[dependencies.sdl2_image]
git = "https://github.com/xsleonard/rust-sdl2_image"

[dependencies.bincode]
path = "./bincode"

[dependencies.network]
path = "./network"
