[package]

name = "dogfights"
version = "0.0.1"
authors = [ "Francesco Mazzoli <f@mazzo.li>" ]

[lib]
name = "dogfights"
path = "dogfights/main.rs"

[[bin]]
name = "dogfights-local"
path = "dogfights/dogfights-local.rs"

[[bin]]
name = "dogfights-server"
path = "dogfights/dogfights-server.rs"

[[bin]]
name = "dogfights-remote"
path = "dogfights/dogfights-remote.rs"

[[bin]]
name = "dogfights-remote-ai"
path = "dogfights/dogfights-remote-ai.rs"

[dependencies]
rustc-serialize = "0.2.8"
log = "^0"
sdl2 = "0.0.18"

[dependencies.sdl2_image]
git = "https://github.com/bitonic/rust-sdl2_image"

[dependencies.scan_mac]
git = "https://github.com/mahkoh/scan"

[dependencies.bincode]
path = "./bincode"

[dependencies.network]
path = "./network"

[dependencies.physics]
path = "./physics"

[dependencies.actors]
path = "./actors"

[dependencies.input]
path = "./input"

[dependencies.render]
path = "./render"

[dependencies.specs]
path = "./render"

[dependencies.server]
path = "./server"

[dependencies.geometry]
path = "./geometry"

[dependencies.conf]
path = "./conf"

[dependencies.ai]
path = "./ai"

