[package]
name = "actors"
version = "0.0.1"
authors = ["Francesco Mazzoli <f@mazzo.li>"]

[lib]
name = "actors"
path = "lib.rs"

[dependencies]
rustc-serialize = "^0"

[dependencies.geometry]
path = "../geometry"

[dependencies.input]
path = "../input"

[dependencies.specs]
path = "../specs"

[dependencies.conf]
path = "../conf"

[dependencies.physics]
path = "../physics"
