[package]
name = "interpolate"
version = "0.0.1"
authors = ["Francesco Mazzoli <f@mazzo.li>"]

[lib]
name = "interpolate"
path = "lib.rs"

[dependencies.geometry]
path = "../geometry"

[dependencies.actors]
path = "../actors"

[dependencies.specs]
path = "../specs"

[dependencies.input]
path = "../input"
