[package]
name = "render"
version = "0.0.1"
authors = ["Francesco Mazzoli <f@mazzo.li>"]

[lib]
name = "render"
path = "lib.rs"

[dependencies]
sdl2 = "^0"
rustc-serialize = "^0"

[dependencies.geometry]
path = "../geometry"

[dependencies.specs]
path = "../specs"

[dependencies.conf]
path = "../conf"

[dependencies.actors]
path = "../actors"
